2005-06-16:
    * First check-in of the documentation project (lawouach)

2005-06-11:
    * getSpecialFunction renamed getSpecialAttribute (mikerobi)

2005-06-10:
    * New test suite (no forks, no exec). (fumanchu)
    * New lib/profiler module. (fumanchu)
    * New session filter (mikerobi)
    * New config.getAll function (mikerobi)

2005-06-09:
    * New sessionauthenticatefilter. This replace CSAuthenticate implementation (based on aspect). (Remi)
    * New nsgmlsfilter. Provides XHTML validation (you need NSGMLS installed). (Remi)

2005-06-02:
    * New WSGI server. (Peter)

2005-06-01:
    * Core (_cphttptools) was completely rewritten to use iterators throughout. (fumanchu)
    * HTTP server has been decoupled from _cpserver. (fumanchu)
    * New WSGI interface to the builtin http server; WSGI is now the default. (fumanchu)
    * Moved session handling into a filter. (fumanchu)
    * New testCore.py for testing basic request and error handling. (fumanchu)
    * autoreload disabled if cpg.server.start is called with initOnly=True. (fumanchu)
    * BACKWARD INCOMPATIBILITY: filters changed, see http://www.cherrypy.org/wiki/WhatsNewIn21#filter_methods. (fumanchu)

2005-05-20:
    * BACKWARD INCOMPATIBILITY: New config system, see http://www.cherrypy.org/wiki/ConfigSystem21 (Remi)
    * Fixed small bug in httptools.redirect (Remi)
    * Allow methods to return recursive generators (Remi)
    * Methods can now return file objects which are red in 64kb chunks. (Mike)

2005-04-25:
    * CherryPy-2.0-final released
    * Added tests about static content and httptools.redirect (Remi)
    * Handle %20 (and others) in static content - ticket #104 (Remi)
    * If y is a static dir make y/a?b try and serve a file named a?b (Dan)
    * Pass threadIndex to onStartThreadList functions - ticket #91 (Remi)
    * Renamed "configDict" into "configMap" for consistency - ticket  #82 (Remi)
    * Dots in requests path are now replaced by underscores  - ticket #87 (Remi)